deployment/v3/external/minio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
spec:
  hosts:
  - "*"
  gateways:
  - minio
  http:
  - name: http
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: minio
        port:
           number: 9000
